infra/k8s/admin/ingress.yaml
# This opens a door so people outside the cluster can open the admin
# panel in their browser, at admin.hospital.local.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hospital-admin-ingress
  namespace: hospital
  labels:
    app.kubernetes.io/part-of: hospital
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web

spec:
  ingressClassName: traefik

  rules:
    - host: admin.100-59-43-37.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hospital-admin-svc
                port:
                  number: 80
